--- a/style.css
+++ b/style.css
@@ -1,3 +1,190 @@
-h1{
-    color: red;
+/* FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Lexend:wght@100..900&display=swap');
+
+
+/* ROOT VARIABLES */
+:root{
+    --bg-color: #0B2A4C;
+    --text-white: #F9F8F4;
+    --text-gray:#484D52;
+    --primary-blue: #0D3F74;
+    --container-width: 1176px;
+    --serif-font: "Instrument Serif", serif;
+    --sans-serif-font: "Lexend", sans-serif;
+}
+
+
+/* DEFAULT STYLING */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: var(--bg-color);
+    font-family: var(--sans-serif-font);
+    font-weight: 300;
+    color: var(--text-white);
+    line-height: 150%;
+    background-image: url(/img/bg-image.jpg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+
+/* typography */
+h1,h2,h3,h4,h5,h6{
+    font-family: var(--serif-font);
+    font-weight: 400;
+    line-height: 125%;
+    color: var(--text-white);
+}
+
+h2{
+    font-size: 4rem;
+}
+
+h4{
+    font-size: 2rem;
+}
+
+.p-small{
+    size: 14px;
+}
+
+.text-color-dark{ color: var(--bg-color); }
+.text-color-gray{ color: var(--text-gray); }
+
+
+/* containers */
+.container{
+    max-width: calc(var(--container-width) + 8rem);
+    padding: 0 4rem;
+}
+
+.content-wrap64{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.btn-wrap{
+    display: flex;
+    justify-content: start;
+    align-items: stretch;
+}
+
+.btn-wrap.content-center{
+    justify-content: center;
+}
+
+.flex-col12{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+
+/* COMPONENTS */
+.btn-main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 100%;
+    gap: 4px;
+    padding: 12px 30px;
+    background-color: var(--primary-blue);
+    border: 1px solid var(--primary-blue);
+    border-radius: 4rem;
+    color: var(--text-white);
+    text-decoration: none;
+    font-family: var(--serif-font);
+    font-style: italic;
+}
+
+.btn-main.btn-large{
+    min-width: 232px;
+}
+
+.section-label-wrap{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-size: 10px
+}
+
+.section-lable-icon{
+    size: 4px;
+}
+
+
+/* SECTIONS */
+nav{
+    padding: 20px 0;
+    border-bottom: 1px solid #0D3F74;
+}
+
+.about-section{
+    padding: 200px 0 164px 0;
+}
+
+.service-section{
+    background-color: var(--text-white);
+    padding: 164px 0;
+}
+
+.service-grid-wrap{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.service-card{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+/* TABLET CSS */
+@media screen and (max-width: 1080px){
+
+    h2{
+        font-size: 3.25rem;
+    }
+
+    .container{
+        padding: 0 2rem;
+    }
+
+    .about-section{
+        padding: 164px 0 100px 0;
+    }
+}
+
+
+/* MOBILE LANDSCAPE */
+@media screen and (max-width: 768px){
+
+    h2{
+        font-size: 3rem;
+    }
+
+    .container{
+        padding: 0 1.5rem;
+    }
+}
+
+
+/* MOBILE PORTRAIT */
+@media screen and (max-width: 480px){
+
+    h2{
+        font-size: 2.625rem;
+    }
+    .container{
+        padding: 0 1.25rem;
+    }
 }
